[package]
name = "dev-radars"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
charming = { version = "0.3.1", features = ["ssr"] }
clap = { version = "4.5.0", features = ["derive"] }
indicatif = "0.17.8"
lazy_static = "1.4.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
